--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@vitejs/plugin-vue-jsx": "^3.0.1",
-    "vue": "^3.3.4"
+    "sass": "^1.64.1",
+    "vant": "^4.6.3",
+    "vue": "^3.3.4",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
